add metadata at index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="FML" />
+    <meta property="og:image" content="./images/logo.png" />
+    <meta name="twitter:card" content="./images/logo.png" />
+    <meta name="description" content="Una misión, llevar el amor de Dios a cada corazón" />
     <title>Fraternidad Misionera Lasallista</title>
   </head>
   <body >
