--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./logo.jpeg" />
+    <link rel="icon" type="image" href="./icon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:title" content="FML" />
-    <meta property="og:image" content="./images/logo.png" />
-    <meta name="twitter:card" content="./images/logo.png" />
+    <meta property="og:image" content="./images/icon.webp" />
+    <meta name="twitter:card" content="./images/icon.webp" />
     <meta name="description" content="Una misión, llevar el amor de Dios a cada corazón" />
     <title>Fraternidad Misionera Lasallista</title>
   </head>
